# au-2019-c-cpp

student/01-Aivazjan-Vazgen/05_10/: 05_10.sln
student/01-Aivazjan-Vazgen/16_09/: 16_09.sln
student/01-Aivazjan-Vazgen/16_09_0/: 16_09_0.sln
student/01-Aivazjan-Vazgen/21_09/: 21_09.sln
student/01-Aivazjan-Vazgen/28_09/: 28_09.sln
student/01-Aivazjan-Vazgen/ConsoleApplication1/: ConsoleApplication1.sln
student/01-Aivazjan-Vazgen/Project1/: Project1.sln  Source1.cpp  Source2.cpp
student/01-Aivazjan-Vazgen/Project2/: Project2.sln
student/01-Aivazjan-Vazgen/Project3/: Project3.sln
student/01-Aivazjan-Vazgen/Project4/: Project4.sln
student/01-Aivazjan-Vazgen/Project5/: Project5.sln
student/01-Aivazjan-Vazgen/Project6/: Project6.sln
student/01-Aivazjan-Vazgen/stek/: stek.sln
student/02-Georgy-Ginzburg/: CMakeLists.txt
student/02-Georgy-Ginzburg/01/: 1.c
student/02-Georgy-Ginzburg/02/: 2.c
student/02-Georgy-Ginzburg/03/: 03.c
student/02-Georgy-Ginzburg/04/: double_linked.c  double_linked.h  single_linked.c  single_linked.h
student/02-Georgy-Ginzburg/05/: copyfile.c  double_linked_with_arbitrary_args.c  double_linked_with_arbitrary_args.h  stack.c  stack.h
student/02-Georgy-Ginzburg/06/: main.c  queue.c  queue.h
student/02-Georgy-Ginzburg/07/: binary_tree.c
student/02-Georgy-Ginzburg/08/: list_traversals.c  matrices.c  matrix1.txt  matrix2.txt
student/02-Georgy-Ginzburg/MyUtil/: mytree.c
student/03_Grigorev_Oleg/: дз2.c  дз3.c
student/08_Ibragimov_Imran/02/: DefineMod.c
student/08_Ibragimov_Imran/03/: GeometricMadness.c
student/08_Ibragimov_Imran/04/: SegmentsWorld.c
student/08_Ibragimov_Imran/05/: FileManager.c  (+2 more)
student/09_Sergey_Kazakov/: 01.c  02.c  03.c
student/10_Kayranov_Svyatoslav/: link.txt
student/19_Panasyuzhenkova Olya/: HW 3.cpp  HW1 - types.xlsx  HW1(result).cpp  HW2.cpp
student/20_Polezhaeva_Lera/: Книга1.xlsx
student/22_Revyakin_Pavel/: 2linkedlist.c
student/25_Senchuk_Nikita/: Домашнее задание от 05.10.2019.cpp  Домашнее задание от 05.10.2019.sln  Домашняя работа от 05.10.2019.vcxproj  Домашняя работа от 05.10.2019.vcxproj.filters
teacher/lecture/: lecture.sln
teacher/lecture_01/: lecture_01.sln
(+611 files in other folders)
